--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Conan Smallwood's Website</h1>
+<p>For Data C100 students: [Data C100 Discussion Notes](https://conan-sw.github.io/ds100/disc-sp25/docs)</p>
 </body>
 </html>
