create nsu website

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Conan Smallwood's Website</h1>
-<p>For Data C100 students: [Data C100 Discussion Notes](https://conan-sw.github.io/ds100/disc-sp25/docs)</p>
+<p>For Data C100 students: <a href = "https://conan-sw.github.io/ds100/disc-sp25/docs">Data C100 Discussion Notes</a></p>
 </body>
 </html>
